# MeowLib

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  Doxyfile  README.md  TODO.md  main.cpp
.forgejo/workflows/: compile.yml
cmake/: Config.cmake.in  FindOpus.cmake
include/: async.h  attachment.h  automod.h  base64.h  buttonInteraction.h  cache.h  channel.h  commandHandling.h  componentInteraction.h  componentsv2.h  contextMenuCommand.h  contextMenuInteraction.h  emoji.h  error.h  eventCodes.h  guild.h  guildScheduledEvent.h  helpers.h  interaction.h  invite.h  log.h  lrucache.h  message.h  modal.h  modalInteraction.h  nyaBot.h  permissions.h  poll.h  presence.h  queue.h  restclient.h  role.h  selectInteraction.h  shard.h  slashCommandInt.h  slashCommands.h  thread.h  typingstart.h  user.h  voice.h
include/componentsv2/: StringSelectComponent.h  actionRowComponent.h  buttonComponent.h  channelSelect.h  checkboxAction.h  checkboxGroupAction.h  componentsv2.h  container.h  file.h  fileupload.h  groupOption.h  label.h  mediagallery.h  mentionableSelect.h  radioGroupAction.h  roleSelect.h  section.h  selectcomponents.h  seperator.h  stringSelect.h  textDisplay.h  textInput.h  thumbnail.h  userSelect.h
include/voice/: voiceOpcodes.h  voiceconnection.h
include/voice/dave/: dave.h  encryptor.h
src/: attachment.cpp  automod.cpp  base64.cpp  channel.cpp  command.cpp  componentInteraction.cpp  componentsv2.cpp  contextMenuCommand.cpp  dispatchHandlers.cpp  emoji.cpp  errors.cpp  events.cpp  guild.cpp  guildScheduledEvent.cpp  helpers.cpp  initConnection.cpp  interaction.cpp  interactionHandler.cpp  invite.cpp  log.cpp  main.cpp  message.cpp  modal.cpp  permissions.cpp  poll.cpp  presence.cpp  queue.cpp  recv.cpp  restclient.cpp  role.cpp  shard.cpp  slashCommand.cpp  slashCommandInt.cpp  slashCommands.cpp  thread.cpp  user.cpp  voice.cpp
src/componentsv2/: ButtonComponent.cpp  StringSelect.cpp  TextDisplay.cpp  actionrow.cpp  buttonComponent.cpp  channelSelect.cpp  checkboxAction.cpp  checkboxGroupAction.cpp  container.cpp  file.cpp  fileupload.cpp  label.cpp  mediagallery.cpp  mentionableSelect.cpp  radioGroupActionComponent.cpp  roleSelect.cpp  section.cpp  seperator.cpp  stringSelect.cpp  textInput.cpp  thumbnail.cpp  userSelect.cpp
src/dispatchHandlers/: automod.cpp  channel.cpp  guild.cpp  interactions.cpp  invite.cpp  message.cpp  state.cpp  thread.cpp  user.cpp  voice.cpp
src/includes/: calculatePP.h  eventCodes.h  getAutoCorrect.h  initConnection.h  nyaBot.h  queue.h  slashCommandInt.h  slashCommands.h  slashcommand.h
src/ppbot/: calculatePP.cpp  getAutoCorrect.cpp
src/voice/: encrypt.cpp  ipdiscovery.cpp  opus.cpp  ready.cpp  recv.cpp  speaking.cpp  voiceServerUpdate.cpp  voiceconnection.cpp
src/voice/dave/: encryptor.cpp  helpers.cpp  payloadprocessor.cpp  session.cpp  validators.cpp
