cmake_minimum_required(VERSION 3.25.1)

project(MeowLib
DESCRIPTION "simple discord bot library written in C++"
VERSION 0.2.0)
if(CMAKE_SYSTEM_NAME STREQUAL "AIX")
  add_compile_options(-pthread)
endif()
find_package(nlohmann_json REQUIRED)
find_package(Threads REQUIRED)
set(CMAKE_CXX_STANDARD 23)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
  add_compile_options(-Wall -Werror -O1 -g)
else()
  add_compile_options(-Wall -Werror -O3)
endif()

file(GLOB_RECURSE MeowLib_src "src/*.cpp")
add_subdirectory(${PROJECT_SOURCE_DIR}/meowHttp)
add_library(MeowLib ${MeowLib_src})
target_compile_definitions(MeowLib PRIVATE MEOWLIB_VERSION="${PROJECT_VERSION}")
target_link_libraries(MeowLib PRIVATE nlohmann_json::nlohmann_json meowHttp Threads::Threads)
